Enable Java 21 preview for frozen v4.0.8 source